[package]
name = "yellowstone-grpc-client"
version = "1.16.2+solana.2.0.10"
authors = { workspace = true }
edition = { workspace = true }
description = "Yellowstone gRPC Geyser Simple Client"
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"
keywords = { workspace = true }
publish = true

[dependencies]
tokio = { version = "1.28" , features = ["rt", "rt-multi-thread"] }
url = "2.5.0"

bytes = { workspace = true }
futures = { workspace = true }
thiserror ={ workspace = true }
tonic = { workspace = true, features = ["tls", "tls-roots"] }
tonic-health = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

# required for CommitmentConfig
solana-sdk = "~2.0.10"
log = "0.4.22"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
